Fix bug where error overlay would always block the buttons behind it.

--- a/styles/app/roots.styl
+++ b/styles/app/roots.styl
@@ -47,6 +47,7 @@
 
 #error-message-root
   z-index: 3
+  pointer-events: none
 
 #landscape-error-overlay
   abs-full-screen()
